acomodamos ortografía, agregamos la tabla de RecognitionComment, agregamos urls, vista de agregar comentario y borrar comentario de reconocimientos, js de visualizar comentarios, fragmento de comentario y lo agregamos a los reconocimientos

--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -29,7 +29,7 @@
             <div class="form-item mb-3">
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia laboral
-                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a capital humano</p>
+                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a Capital Humano</p>
                 </div>
                 <div class="form-actions">
                     <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
@@ -39,7 +39,7 @@
             <div class="form-item mb-3">
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia especial
-                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a capital humano</p>
+                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a Capital Humano</p>
                 </div>
                 <div class="form-actions">
                     <a href="{% url 'constancia_especial' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
@@ -201,7 +201,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="submit" class="btn btn-primary" >Generar constancia</button>
+          <button type="submit" class="btn btn-primary" >Solicitar constancia</button>
         </div>
       </div>
     </form>
